--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<h1>Odin Recipes</h1>
 	<ul>
 		<li><a href="recipes/lasagna.html">Lasagna</a></li>
-		<li><a href="recipes/hamburger.html">Hamburger</a></li>
+		<li><a href="recipes/pbc.html">Peanut Butter Cookies</a></li>
 		<li><a href="recipes/pizza.html">Pizza</a></li>
 	</body>
 </html>
