--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Odin Recipes</title>
+		<link rel="stylesheet" href="mainStyle.css">
 	</head>
 	<body>
-	<h1>Odin Recipes</h1>
-	<ul>
-		<li><a href="recipes/lasagna.html">Lasagna</a></li>
-		<li><a href="recipes/pbc.html">Peanut Butter Cookies</a></li>
-		<li><a href="recipes/pizza.html">Pizza</a></li>
+		<h1>Odin Recipes</h1>
+		<hr>
+		<div class="recipes">
+			<ul>
+				<li><a href="recipes/lasagna.html">Lasagna</a></li>
+				<li><a href="recipes/pbc.html">Peanut Butter Cookies</a></li>
+				<li><a href="recipes/pizza.html">Pizza</a></li>
+			</ul>
+		</div>
 	</body>
 </html>
