--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Lasagna</title>
+		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
 	<h1>Lasagna</h1>
@@ -11,7 +12,7 @@
 	<p>Impress your entire family tonight with this flavorful, vegetarian lasagna! With three cheeses, Minute® Instant Brown Rice and lentils mixed with marinara and chopped basil, it’s bursting with gooey goodness the whole family will love.</p>
 	
 	<h3>Ingredients</h3>
-	<ul>
+	<ul class="ingredients">
 		<li>3 cups Minute® Brown Rice</li>
 		<li>1 jar (24 oz)  sauce</li>
 		<li>1 can (19 oz) lentils, drained and rinsed</li>
@@ -22,7 +23,7 @@
 	</ul>
 	
 	<h3>Steps</h3>
-	<ol>
+	<ol class="steps">
 		<li>Preheat oven to 400˚F. Prepare rice according to package directions.</li>
 		<li>Meanwhile, stir together marinara sauce, lentils, spinach, oil and basil in a medium bowl.</li>
 		<li>Spread 1/2 cup lentil mixture in the bottom of a greased 9×13-inch baking dish. Layer one third of rice over top. Layer with half the remaining lentil mixture, 1/2 cup mozzarella cheese, 1 cup ricotta cheese and 1/4 cup Parmesan cheese. Repeat layers one more time. Top with remaining rice, remaining mozzarella and Parmesan cheeses.</li>
