--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Pizza</title>
+		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
 	<h1>Pizza</h1>
@@ -11,7 +12,7 @@
 	<p>Add your favorite toppings to this tasty 30-min homemade pizza crust for a new quick-and-easy family favorite meal.</p>
 	
 	<h3>Ingredients</h3>
-	<ul>
+	<ul class="ingredients">
 		<li>1-3/4 to 2-1/4 cups all purpose flour</li>
 		<li>1 envelope Fleischmann's® Pizza Crust Yeast (or Fleischmann’s® RapidRise® Instant Yeast)r</li>
 		<li>1-1/2 teaspoons sugarr</li>
@@ -23,7 +24,7 @@
 	</ul>
 	
 	<h3>Steps</h3>
-	<ol>
+	<ol class="steps">
 		<li>Preheat oven to 425°F.</li>
 		<li>Combine 1 cup flour, undissolved yeast, sugar and salt in a large bowl. Add very warm water and oil; mix until well blended, about 1 minute. Gradually add enough remaining flour to make a soft dough. Dough should form a ball and will be slightly sticky. Knead** on a floured surface, adding additional flour if necessary, until smooth and elastic, about 4 minutes. (If using RapidRise Yeast, let dough rest at this point for 10 minutes.)</li>
 		<li>Pat dough with floured hands to fill greased pizza pan or baking sheet. OR roll dough on a floured counter to 12-inch circle; place in greased pizza pan or baking sheet. Form a rim by pinching the edge of the dough.</li>
